# rzmq

./: .gitignore  API_REFERENCE.md  Cargo.toml  README.md  test_chaos.txt
bench/: Cargo.toml  GUIDE.md  README.md
bench/docs/: linux_bench.md  mac_bench.md
bench/src/: cli.rs  client.rs  main.rs  metrics.rs  orchestrator.rs  server.rs
benches/: pub_sub_throughput.rs  pull_throughput.rs  req_rep_throughput.rs  throughput.rs
cli/: Cargo.toml  README.md
cli/src/: cli.rs  main.rs
cli/src/commands/: keygen.rs
core/: API_REFERENCE.md  Cargo.toml  README.USAGE.md  README.md
core/archive/: distributor copy.rs  load_balancer_old.rs
core/benches/: dealer_router_throughput.rs  generic_client_benchmark.rs  multishot_recv_bench.rs  pub_sub_throughput.rs  pull_throughput.rs  push_pull_throughput.rs  req_rep_throughput.rs  tcp_cork_bench.rs  zerocopy_bench.rs
core/examples/: dealer_router_multi_example.rs  dealrtr_multiclient.rs  dealrtr_multitask.rs  iouring_basic.rs  iouring_dealrtr_multiclient.rs  iouring_dealrtr_multitask.rs  iouring_multi_throughput.rs  iouring_throughput.rs  noise_xx_push_pull.rs  plain_req_rep.rs  pub_sub_example.rs  push_pull_example.rs  req_rep_example.rs  req_rep_flurry.rs
core/examples/common/: capacity_gate.rs  mod.rs
core/src/: context.rs  error.rs  lib.rs  profiler.rs
core/src/engine/: core.rs  mod.rs  uring_core.rs  uring_recv.rs  zmtp_ipc.rs  zmtp_tcp.rs
core/src/io_uring_backend/: buffer_manager.rs  byte_handler.rs  connection_handler.rs  mod.rs  one_shot_sender.rs  ops.rs  provided_buffer_ring.rs  send_buffer_pool.rs  signaling_op_sender.rs  zmtp_handler.rs
core/src/io_uring_backend/worker/: cqe_processor.rs  eventfd_poller.rs  external_op_tracker.rs  handler_manager.rs  internal_op_tracker.rs  main_loop.rs  mod.rs  multishot_reader.rs  observability.rs  sqe_builder.rs
core/src/message/: blob.rs  flags.rs  metadata.rs  mod.rs  msg.rs
core/src/observability/: macros.rs  mod.rs  uring.rs
core/src/protocol/: mod.rs
core/src/protocol/zmtp/: actions.rs  codec.rs  command.rs  engine.rs  greeting.rs  manual_parser.rs  mod.rs
core/src/runtime/: actor_drop_guard.rs  command.rs  event_bus.rs  global_uring_state.rs  latch.rs  mailbox.rs  mod.rs  one_shot_sender.rs  pipe.rs  system_events.rs  uring_runtime.rs  waitgroup.rs
core/src/security/: cipher.rs  framer.rs  mechanism.rs  mod.rs  noise_stream.rs  noise_xx.rs  null.rs  plain.rs  zap.rs
core/src/security/curve/: cipher.rs  handshake.rs  mechanism.rs  mod.rs
core/src/security/framer/: encoder.rs  mod.rs
core/src/session/: base.rs  mod.rs
core/src/sessionx/: actor.rs  cork.rs  egress_buffer.rs  egress_future.rs  egress_scheduler.rs  iface.rs  ingress_future.rs  message_processor.rs  mod.rs  pipe_manager.rs  regulator.rs  states.rs  types.rs
core/src/sessionx/protocol_handler/: data_io.rs  handshake.rs  heartbeat.rs  mod.rs
core/src/socket/: connection_iface.rs  core.rs  dealer_socket.rs  events.rs  mod.rs  options.rs  pub_socket.rs  pull_socket.rs  push_socket.rs  rep_socket.rs  req_socket.rs  router_socket.rs  sub_socket.rs  types.rs
core/src/socket/core/: _core.rs  command_loop.rs  command_processor.rs  event_processor.rs  inproc_reader.rs  mod.rs  pipe_manager.rs  shutdown.rs  state.rs
core/src/socket/patterns/: addressed_ingress.rs  anonymous_ingress.rs  distributor.rs  fair_queue.rs  framing.rs  incoming_orchestrator.rs  load_balancer.rs  mod.rs  outgoing_orchestrator.rs  pipe_coordinator.rs  ready_pipe_queue.rs  router.rs  routerr_old.rs  trie.rs
core/src/throttle/: mod.rs  strategies.rs  types.rs
core/src/transport/: endpoint.rs  inproc.rs  inproc_stream.rs  ipc.rs  mod.rs  tcp.rs  uring_stream.rs
core/src/transport/inproc/: connection.rs  handshake.rs  mod.rs  types.rs
core/src/uring/: global_state.rs  mod.rs
core/tests/: common.rs  curve.rs  dealer_dealer.rs  dealer_rep.rs  dealer_router.rs  dealer_router_advanced.rs  dns.rs  fsm_violations.rs  inproc_minimal.rs  io_uring_resource_exhaustion.rs  lifecycle.rs  maxmsgsize.rs  mre_ingress_deadlock.rs  multishot_receive.rs  noise_xx.rs  plain_tests.rs  pub_sub.rs  push_pull.rs  push_pull_lifecycle.rs  push_pull_load_balance.rs  reconnect_tests.rs  req_rep.rs  req_rep_advanced.rs  req_rep_repro.rs  req_router.rs  router_router.rs  router_scaling.rs  security_curve.rs  security_noise_xx.rs  security_plain.rs  shutdown_race.rs  soak_tests.rs  socket_options.rs  stress.rs  subscription_trie_contention.rs  tcp_corking.rs  transport_failures.rs  zerocopy_send.rs
docs/: API_REFERENCE.md  IMPL.md  SPEC.md  cancel_safety.md  sitrep.md
docs/benches/: dealer_router_thruput.md  pub_sub_thruput.md  push_pull_thruput.md  req_rep_thruput.md
interop/: .gitignore  Cargo.toml  run_replicate.sh  run_tests.sh  setup_env.sh
interop/python_scripts/: dealer_raw.py  pub_server.py  push_server.py  rep_server.py  replicate_req_router.py  req_client_for_router.py  router_raw.py  router_server.py  router_server_for_req.py  zmtp2_client.py  zmtp2_server.py
interop/tests/: manual_framing.rs  pyzmq_dealer_router.rs  pyzmq_pub_sub.rs  pyzmq_push_pull.rs  pyzmq_req_rep.rs  pyzmq_req_router.rs  zmtp2_handshake.rs
interop/tests/common/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: context.rs  error.rs  lib.rs
src/engine/: core.rs  mod.rs  zmtp_ipc.rs  zmtp_tcp.rs
src/message/: flags.rs  metadata.rs
src/protocol/: mod.rs
src/protocol/zmtp/: codec.rs  command.rs  mod.rs
src/runtime/: actor_drop_guard.rs  command.rs  mailbox.rs  mod.rs  waitgroup.rs
src/security/: mechanism.rs  mod.rs
src/session/: base.rs  mod.rs
src/socket/: core.rs  dealer_socket.rs  mod.rs  options.rs  pub_socket.rs  pull_socket.rs  push_socket.rs  rep_socket.rs  req_socket.rs  router_socket.rs  sub_socket.rs  types.rs
src/socket/patterns/: distributor.rs  fair_queue.rs  mod.rs  (+3 more)
src/transport/: endpoint.rs  inproc.rs  ipc.rs  mod.rs  tcp.rs
tests/: common.rs  dealer_router_advanced.rs  inproc_minimal.rs  lifecycle.rs  pub_sub.rs  push_pull.rs  push_pull_lifecycle.rs  req_rep.rs  req_rep_advanced.rs  transport_failures.rs
