[package]
name = "rzmq"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = true

description = "An asynchronous, pure-Rust implementation of ZeroMQ (ØMQ) messaging patterns, with optional io_uring acceleration on Linux."
authors = ["Excerion Sun <dev@excsn.com>", "Norm O <normo.pub@gmail.com>"]
readme = "README.md"
repository = "https://github.com/excsn/rzmq"
homepage = "https://github.com/excsn/rzmq"
keywords = ["zeromq", "messaging", "async", "network", "io_uring"]
categories = ["asynchronous", "network-programming", "concurrency"]

[features]
full = ["default", "ipc", "inproc", "noise_xx"]
full-linux = ["full", "io-uring"]
default = ["ipc", "inproc"]

io-uring = ["dep:io-uring", "dep:io_uring_buf_ring", "dep:tokio-uring"]
noise_xx = ["dep:snow", "dep:x25519-dalek"]
ipc = []
inproc = []

bench_external_clients = []

[dependencies]
rzmq_macros = { version = "^0", path = "../macros" }

# --- Core Async Runtime & Concurrency ---
async-channel = "^1.8"
async-trait = "^0.1.88"
async-recursion = "^1.0"
tokio = { version = "^1", features = ["fs", "rt", "rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
tokio-util = { version = "^0.7", features = ["codec"] }
futures = "^0.3"
parking_lot = "^0"
kanal = "^0.1"
tokio-uring = { version = "^0", optional = true }

# --- I/O & Buffers ---
bytes = "^1.4"
io-uring = { version = "^0.7", optional = true } # Check for the latest stable version
io_uring_buf_ring = { version = "^0.2", optional = true } # Check for the latest stable version
libc = "0.2"
socket2 = "^0"

# --- Utilities ---
tracing = "^0.1"
rand = "^0.9"
bitflags = "^2.4"
linked-hash-map = "^0.5.6"

# --- Error Handling ---
thiserror = "^1.0"

# --- Security ---
snow = { version = "^0.9", optional = true }
x25519-dalek = { workspace = true, optional = true }

[dev-dependencies]
# For benchmarks
anyhow = "^1"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "^3"
# For integration tests
tokio-test = "^0.4"
# For concurrency testing
# loom = { version = "0.6", optional = true }

# For fuzzing tests
# cargo-fuzz = { version = "0.11", optional = true }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] } # Optional for easy logging setup

[[bench]]
name = "pull_throughput"
harness = false

[[bench]]
name = "req_rep_throughput"
harness = false

[[bench]]
name = "pub_sub_throughput"
harness = false

[[bench]]
name = "dealer_router_throughput"
harness = false

[[bench]]
name = "generic_client_benchmark"
harness = false
required-features = ["bench_external_clients"]

[[bench]]
name = "tcp_cork_bench"
harness = false

[[bench]]
name = "zerocopy_bench"
harness = false
required-features = ["io-uring"]

[[example]]
name = "plain_req_rep"
path = "examples/plain_req_rep.rs"

[[example]]
name = "noise_xx_push_pull"
path = "examples/noise_xx_push_pull.rs"
required-features = ["noise_xx"]