[package]
name = "rzmq"
version = "0.5.7"
edition = "2024"
license = "MPL-2.0"
publish = true

description = "A high performance, fully asynchronous, safe pure-Rust implementation of ZeroMQ (ØMQ) messaging with io_uring and tcp cork acceleration on Linux."
authors = ["Excerion Sun <dev@excsn.com>", "Norm O <normo.pub@gmail.com>"]
readme = "README.md"
repository = "https://github.com/excsn/rzmq"
homepage = "https://github.com/excsn/rzmq"
keywords = ["zeromq", "messaging", "async", "network", "io_uring"]
categories = ["asynchronous", "network-programming", "concurrency"]

[features]
full = ["default", "ipc", "inproc", "plain", "noise_xx", "curve"]
full-linux = ["full", "io-uring"]
default = ["ipc", "inproc", "plain"]

io-uring = ["dep:eventfd", "dep:io-uring", "dep:io_uring_buf_ring"]
noise_xx = ["dep:snow", "dep:x25519-dalek"]
curve = ["dep:dryoc"]
ipc = []
inproc = []
plain = []

bench_external_clients = []

[dependencies]

# --- Core Async Runtime & Concurrency ---
fibre = { version = "^0.5" }
async-trait = "^0.1.88"
async-recursion = "^1.0"
tokio = { version = "^1", features = ["fs", "rt", "rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
tokio-util = { version = "^0.7", features = ["codec"] }
futures = "^0.3"
parking_lot = "^0.12"

# --- I/O & Buffers ---
bytes = "^1.4"
eventfd = {version = "^0.2", optional = true } 
io-uring = { version = "^0.7", optional = true }
io_uring_buf_ring = { version = "^0.2", optional = true }
libc = "0.2"
socket2 = { version = "0.6", features = ["all"] }

# --- Utilities ---
atomic_float = "^1"
bitflags = "^2.4"
dashmap = "^5.5"
hex = "0.4.3"
linked-hash-map = "^0.5.6"
once_cell = "^1"
rand = "^0.9"
tracing = { workspace = true }
zeroize = "1.8.2"

# --- Error Handling ---
thiserror = "^2.0"

# --- Security ---
snow = { version = "^0.9", optional = true }
x25519-dalek = { workspace = true, optional = true }
dryoc = { version = "^0.7", optional = true }

[dev-dependencies]
# For benchmarks
anyhow = "^1"
criterion = { version = "0.5", features = ["async_tokio"] }
bench_matrix = { version = "^0" }
serial_test = "^3"
# For integration tests
tokio-test = "^0.4"
futures-intrusive = "^0"

# For fuzzing tests
# cargo-fuzz = { version = "0.11", optional = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "pull_throughput"
harness = false

[[bench]]
name = "req_rep_throughput"
harness = false

[[bench]]
name = "pub_sub_throughput"
harness = false

[[bench]]
name = "dealer_router_throughput"
harness = false

[[bench]]
name = "generic_client_benchmark"
harness = false
required-features = ["bench_external_clients"]

[[example]]
name = "plain_req_rep"
path = "examples/plain_req_rep.rs"

[[example]]
name = "noise_xx_push_pull"
path = "examples/noise_xx_push_pull.rs"
required-features = ["noise_xx"]

[[example]]
name = "iouring_basic"
path = "examples/iouring_basic.rs"
required-features = ["io-uring"]

[[example]]
name = "iouring_throughput"
path = "examples/iouring_throughput.rs"
required-features = ["io-uring"]

[[example]]
name = "iouring_dealrtr_multiclient"
path = "examples/iouring_dealrtr_multiclient.rs"
required-features = ["io-uring"]

[[example]]
name = "iouring_dealrtr_multitask"
path = "examples/iouring_dealrtr_multitask.rs"
required-features = ["io-uring"]

[[test]]
name = "inproc_minimal"
required-features = ["inproc"]

[[test]]
name = "curve"
required-features = ["curve"]

[[test]]
name = "noise_xx"
required-features = ["noise_xx"]