[package]
name = "rzmq_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"

# This feature flag is local to rzmq-macros FOR TESTING the macro logic itself.
# The rzmq crate's io-uring feature will enable this one if rzmq-macros is an optional dependency.
# Or, if rzmq-macros is always included, rzmq's feature flag will be checked by the macro.
# For simplicity in the macro, we'll assume that if the "io-uring" feature is active
# *when the macro is compiled for rzmq*, it means rzmq wants io_uring.
[features]
io-uring = []